projetos de jpg para png

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         <!--Projects images-->
         <div class="projects-imgs reveal">
             <div class="project-img-container"><img src="assets/projects-image/goku.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
-            <div class="project-img-container"><img src="assets/projects-image/naruto.jpg" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
-            <div class="project-img-container"><img src="assets/projects-image/tghoul.jpg" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
+            <div class="project-img-container"><img src="assets/projects-image/naruto.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
+            <div class="project-img-container"><img src="assets/projects-image/tghoul.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
             <div class="project-img-container"><img src="assets/projects-image/kurama.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
-            <div class="project-img-container"><img src="assets/projects-image/dbz.jpg" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
+            <div class="project-img-container"><img src="assets/projects-image/dbz.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
             <div class="project-img-container"><img src="assets/projects-image/sasuke.png" class="project-content" tittle = "Lamento, indisponivel no momento :/" alt=""></div>
         </div>
     </section>
